--- a/customers/include/layout/header/header.css
+++ b/customers/include/layout/header/header.css
@@ -68,7 +68,12 @@
 
 
         }
+        .headerFlexContainer .headerFlexItem2 .logInContainer .logInInputs form {
+            height:100%;
+            width:100%;
 
+
+        }
         .headerFlexContainer .headerFlexItem2  .logInContainer:hover .logInInputs {
             position:absolute;
             display:block;
@@ -133,7 +138,35 @@
                 position: relative;;
             }
     
-    
+            .headerFlexContainer .headerFlexItem2 .loggedInContainer .logoutContainer {
+                /* width:95px; */
+                height:100%;
+                float:left;
+                position:relative;
+                /* margin-top:2%;   */
+                /* margin-left:3%;           */
+                /* line-height:100px; */
+                /* border-left:1px solid black; */
+                /* border-right:1px solid black; */
+            }
+            .headerFlexContainer .headerFlexItem2 .loggedInContainer .logoutContainer button{
+                display:block;
+                width:90px;
+                height:100%;
+                text-decoration:none;
+                color:black;
+                font-weight: bold;
+                /* background-color:#292525; */
+                font-size:12px;
+                letter-spacing: .05em;
+                text-align:center;
+                line-height: 46px;
+                /* border-radius: 5px; */
+                text-transform: uppercase;
+                font-family:sans-serif;
+
+            }
+
             .headerFlexContainer .headerFlexItem2 .loggedInContainer .linkContainer {
                 /* width:95px; */
                 height:100%;
