Kommit längre med skapandet av arena. Ska nu börja pyssla ihop så att vi kan visa datan, samt skicka datan till databasen på ett smart sätt.

--- a/admin/include/layout/main/test_skapa_arena_4.css
+++ b/admin/include/layout/main/test_skapa_arena_4.css
@@ -5,9 +5,8 @@ form#multiphase {
     margin:auto;
 }
 
-form#multiphase > #phase2, #phase3, #show_all_data {
-    /* display:none; */
-    border:2px solid black;
+form#multiphase > #phase2, #phase3, #phase4, #show_all_data {
+    display:none;
     margin-top:40px;
 }
 
