--- a/customers/include/layout/header/header.css
+++ b/customers/include/layout/header/header.css
@@ -95,6 +95,9 @@
             border:1px solid black;
             margin-bottom:8px;
         }
+        .headerFlexContainer .headerFlexItem2  .logInContainer .logInInputs input[type="submit"] {
+            width:40%;
+        }
          
          
         
