Främst rensning, samt anteckningar

--- a/admin/include/layout/parentgrid.css
+++ b/admin/include/layout/parentgrid.css
@@ -48,7 +48,7 @@ body {
 
     "logo logo logo nav nav nav nav nav nav nav nav nav nav nav "
     " logo  logo logo search search search search search search search search search search search"
-    "subMenu subMenu subMenu subMenu subMenu subMenu subMenu subMenu subMenu subMenu subMenu subMenu subMenu subMenu"
+    " main main main main main main main main main main main main main main"
 
     " main main main main main main main main main main main main main main"
     "footer footer footer footer footer footer footer footer footer footer footer footer footer footer";
